fix: handle button jumping on active [WPB-12145] (#18414)

--- a/src/style/foundation/video-calling.less
+++ b/src/style/foundation/video-calling.less
@@ -122,6 +122,10 @@
 
   &__item {
     position: relative;
+
+    & button {
+      vertical-align: middle;
+    }
   }
 
   &__centered-items {
